Convert to Java 8 compatible code, build using Java 8
Since old Minecraft is typically played using older Java versions.