@@ -4,9 +4,11 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.FileAttribute;
 import java.nio.file.attribute.PosixFilePermissions;
+import java.util.HashMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -42,7 +44,7 @@ public class ServerPlayerStats {
     }
 
     public static void setWorldDirectory(String worldDirName) {
-        STATS = Path.of(worldDirName).resolve("stats");
+        STATS = Paths.get(worldDirName).resolve("stats");
     }
 
     public void increment(PlayerEntity player, Stat stat, int amount) {
@@ -57,6 +59,16 @@ public class ServerPlayerStats {
 
     public int get(Stat stat) {
         return this.counters.getOrDefault(stat, 0);
+    }
+
+    public Map<String, Integer> getRawStats() {
+        Map<String, Integer> raw = new HashMap<>();
+
+        for (Entry<Stat, Integer> counter : this.counters.entrySet()) {
+            raw.put(counter.getKey().key, counter.getValue());
+        }
+
+        return raw;
     }
 
     public void load() {
@@ -81,7 +93,7 @@ public class ServerPlayerStats {
             Files.createDirectories(base);
 
             Path temp = Files.createTempFile(base, this.name, ".json", DEFAULT_ATTRIBUTES);
-            Files.writeString(temp, this.serialize(), StandardCharsets.UTF_8);
+            Files.write(temp, this.serialize().getBytes(StandardCharsets.UTF_8));
 
             Files.move(temp, path, StandardCopyOption.ATOMIC_MOVE); // Prevent issues on server crash
         } catch (IOException e) {
@@ -91,7 +103,7 @@ public class ServerPlayerStats {
 
     public void deserialize() throws IOException {
         Path path = getStatsDirectory().resolve(this.name + ".json");
-        JsonElement root = JsonParser.parseString(Files.readString(path, StandardCharsets.UTF_8));
+        JsonElement root = JsonParser.parseString(new String(Files.readAllBytes(path), StandardCharsets.UTF_8));
 
         if (!root.isJsonObject()) {
             return;
