@@ -5,9 +5,11 @@ import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
 import com.google.gson.reflect.TypeToken;
+import net.lostluma.server_stats.Constants;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.Nullable;
+import org.quiltmc.loader.api.ModContainer;
 import org.quiltmc.loader.api.QuiltLoader;
 
 import java.io.IOException;
@@ -15,9 +17,12 @@ import java.lang.reflect.Type;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.Iterator;
 import java.util.Map;
+import java.util.Optional;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
@@ -29,7 +34,7 @@ public class ServerPlayerStatFix {
     private static final Pattern UPGRADEABLE = Pattern.compile("^(?<type>stat.(?:breakItem|craftItem|mineBlock|useItem).)(?<id>\\d+)$");
 
     public static void upgradePlayerStats(String worldDir) throws IOException {
-        Path stats = Path.of(worldDir).resolve("stats");
+        Path stats = Paths.get(worldDir).resolve("stats");
 
         if (!Files.isDirectory(stats)) {
             return;
@@ -49,13 +54,13 @@ public class ServerPlayerStatFix {
     }
 
     private static void upgradePlayerStats(Path path) throws IOException {
-        var data = JsonParser.parseString(Files.readString(path));
+        JsonElement data = JsonParser.parseString(new String(Files.readAllBytes(path), StandardCharsets.UTF_8));
 
         if (!data.isJsonObject()) {
             throw new RuntimeException("Unable to upgrade stats file " + path.getFileName() + ".");
         }
 
-        var copy = upgradeStats((JsonObject) data);
+        JsonObject copy = upgradeStats((JsonObject) data);
 
         if (copy == null) {
             return;
@@ -64,18 +69,18 @@ public class ServerPlayerStatFix {
         Files.createDirectories(BACKUPS);
         Files.move(path, BACKUPS.resolve(path.getFileName()), StandardCopyOption.REPLACE_EXISTING);
 
-        Files.writeString(path, copy.toString(), StandardCharsets.UTF_8);
+        Files.write(path, copy.toString().getBytes(StandardCharsets.UTF_8));
     }
 
     private static @Nullable JsonObject upgradeStats(JsonObject data) throws IOException {
-        var upgraded = false;
-        var copy = new JsonObject();
+        boolean upgraded = false;
+        JsonObject copy = new JsonObject();
 
         for (Map.Entry<String, JsonElement> entry : data.entrySet()) {
-            var key = entry.getKey();
-            var value = entry.getValue();
+            String key = entry.getKey();
+            JsonElement value = entry.getValue();
 
-            var replaced = getUpgradedStatName(key);
+            String replaced = getUpgradedStatName(key);
 
             if (replaced == null) {
                 copy.add(key, value);
@@ -89,13 +94,13 @@ public class ServerPlayerStatFix {
     }
 
     private static @Nullable String getUpgradedStatName(String previous) {
-        var match = UPGRADEABLE.matcher(previous);
+        Matcher match = UPGRADEABLE.matcher(previous);
 
         if (match.matches()) {
-            var id = match.group("id");
-            var type = match.group("type");
+            String id = match.group("id");
+            String type = match.group("type");
 
-            var resourceLocation = ID_MAP.get(id);
+            Object resourceLocation = ID_MAP.get(id);
 
             if (resourceLocation != null) {
                 return type + "minecraft." + resourceLocation;
@@ -108,12 +113,15 @@ public class ServerPlayerStatFix {
     }
 
     private static void populateIdMap() throws IOException {
-        var modId = "server_stats";
+        Optional<ModContainer> container = QuiltLoader.getModContainer(Constants.MOD_ID);
 
-        var container = QuiltLoader.getModContainer(modId).orElseThrow();
-        var path = container.getPath("assets/" + modId + "/data/id_map.json");
+        if (!container.isPresent()) {
+            throw new RuntimeException("Unable to get own mod container!");
+        }
+
+        Path path = container.get().getPath("assets/" + Constants.MOD_ID + "/data/id_map.json");
 
         Type type = new TypeToken<Map<String, String>>(){}.getType();
-        ID_MAP = new Gson().fromJson(Files.readString(path, StandardCharsets.UTF_8), type);
+        ID_MAP = new Gson().fromJson(new String(Files.readAllBytes(path), StandardCharsets.UTF_8), type);
     }
 }
